--- a/herosection/templates/hod_template/base_template.html
+++ b/herosection/templates/hod_template/base_template.html
@@ -60,7 +60,27 @@
 
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
-    {% include 'hod_template/content_header.html' %}
+    
+<!-- Content Header (Page header) -->
+<div class="content-header">
+  <div class="container-fluid">
+      <div class="row mb-2">
+      <div class="col-sm-6">
+          <h1 class="m-0 text-dark">
+              {% comment %} adding block for page title so this block data I will pass from child template page {% endcomment %}
+              {% block page_title %}
+              {% endblock page_title %}
+          </h1>
+      </div><!-- /.col -->
+      <div class="col-sm-6">
+          <ol class="breadcrumb float-sm-right">
+          <li class="breadcrumb-item"><a href="{% url 'admin_home' %}">Home</a></li>
+          <li class="breadcrumb-item active">Dashboard v1</li>
+          </ol>
+      </div><!-- /.col -->
+      </div><!-- /.row -->
+  </div><!-- /.container-fluid -->
+  </div>
     <!-- /.content-header -->
 
      {% block main_content %}{% endblock main_content %}
