--- a/herosection/templates/hod_template/home_content.html
+++ b/herosection/templates/hod_template/home_content.html
@@ -1,4 +1,7 @@
 {% extends 'hod_template/base_template.html' %}
+{% block page_title %}
+Home
+{% endblock page_title %}
 {%block main_content %}
 <!-- Main content -->
 <section class="content">
