--- a/herosection/templates/hod_template/sidebar_template.html
+++ b/herosection/templates/hod_template/sidebar_template.html
@@ -4,9 +4,9 @@
     <a href="index3.html" class="brand-link">
       <img src="{% static "dist/img/AdminLTELogo.png" %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
            style="opacity: .8">
-      <span class="brand-text font-weight-light">AdminLTE 3</span>
+      <span class="brand-text font-weight-light">Digital Classroom</span>
     </a>
-
+    
     <!-- Sidebar -->
     <div class="sidebar">
       <!-- Sidebar user panel (optional) -->
@@ -15,7 +15,7 @@
           <img src="{% static "dist/img/user2-160x160.jpg" %}" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">Alexander Pierce</a>
+          <a href="#" class="d-block">Admin-HOD</a>
         </div>
       </div>
 
