--- a/herosection/templates/hod_template/base_template.html
+++ b/herosection/templates/hod_template/base_template.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Student Management System</title>
+  <title>Digital Classroom</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
@@ -40,18 +40,19 @@
         <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
       </li>
     </ul>
-    <h4 style="margin-left: 10px;margin-top: 5px;">Student Management Sytem HOD Login</h4>
+    <h4 style="margin-left: 10px;margin-top: 5px;">Digital Classroom | Admin Login</h4>
     <ul class="navbar-nav ml-auto">
       <!-- Messages Dropdown Menu -->
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'logout_user' %}">
+        {% comment %} <a class="nav-link" href="{% url 'logout_user' %}"> {% endcomment %}
+        <a class="nav-link" href="/logout_user">
           Logout
         </a>
       </li>
     </ul>
 
     <!-- Right navbar links -->
-     {%include 'hod_template/notification_template.html'%}
+    {% comment %} {%include 'hod_template/notification_template.html'%} {% endcomment %}
   </nav>
   <!-- /.navbar -->
 
@@ -75,7 +76,7 @@
       <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
           <li class="breadcrumb-item"><a href="{% url 'admin_home' %}">Home</a></li>
-          <li class="breadcrumb-item active">Dashboard v1</li>
+          {% comment %} <li class="breadcrumb-item active">Dashboard v1</li> {% endcomment %}
           </ol>
       </div><!-- /.col -->
       </div><!-- /.row -->
