--- a/herosection/templates/hod_template/sidebar_template.html
+++ b/herosection/templates/hod_template/sidebar_template.html
@@ -15,7 +15,7 @@
           <img src="{% static "dist/img/user2-160x160.jpg" %}" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">Admin-HOD</a>
+          <a href="#" class="d-block">Admin | {{ user.username }}</a>
         </div>
       </div>
 
