--- a/herosection/templates/hod_template/base_template.html
+++ b/herosection/templates/hod_template/base_template.html
@@ -45,7 +45,7 @@
       <!-- Messages Dropdown Menu -->
       <li class="nav-item">
         {% comment %} <a class="nav-link" href="{% url 'logout_user' %}"> {% endcomment %}
-        <a class="nav-link" href="/logout_user">
+        <a class="nav-link" href="{% url 'logout' %}">
           Logout
         </a>
       </li>
