--- a/herosection/templates/hod_template/edit_student_template.html
+++ b/herosection/templates/hod_template/edit_student_template.html
@@ -4,7 +4,7 @@ Edit Student |  Username : {{ username }} | #ID : {{ id }}
 {% endblock page_title %}
 {% block main_content %}
     <!-- Main content -->
-    {% comment %} <section class="content">
+    <section class="content">
       <div class="container-fluid">
           <div class="row">
               <div class="col-md-12">
@@ -24,6 +24,6 @@ Edit Student |  Username : {{ username }} | #ID : {{ id }}
           </div>
           </div>
       </div>
-    </section> {% endcomment %}
+    </section>
     <!-- /.content -->
 {% endblock main_content %}
