--- a/herosection/templates/hod_template/add_subject_template.html
+++ b/herosection/templates/hod_template/add_subject_template.html
@@ -25,7 +25,8 @@ Add Subject
                    <div class="form-group">
                     <label>Course </label>
                     <select class="form-control" name="course">
-                        {% for course in courses %}
+                      <option value="" selected disabled>Select Course</option> <!-- Default option -->
+                      {% for course in courses %}
                           <option value="{{ course.id }}">{{ course.course_name }}</option>
                         {% endfor %}
                     </select>
@@ -33,7 +34,8 @@ Add Subject
                   <div class="form-group">
                     <label>Staff</label>
                     <select class="form-control" name="staff">
-                        {% for staff in staffs %}
+                      <option value="" selected disabled>Select Staff</option> <!-- Default option -->
+                      {% for staff in staffs %}
                           <option value="{{ staff.id }}">{{ staff.first_name }} {{ staff.last_name }}</option>
                         {% endfor %}
                     </select>
