--- a/herosection/templates/staff_template/base_template.html
+++ b/herosection/templates/staff_template/base_template.html
@@ -40,7 +40,7 @@
         <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
       </li>
     </ul>
-    <h4 style="margin-left: 10px;margin-top: 5px;">Digital Classroom | Admin Panel</h4>
+    <h4 style="margin-left: 10px;margin-top: 5px;">Digital Classroom | Staff Panel</h4>
     <ul class="navbar-nav ml-auto">
       <!-- Messages Dropdown Menu -->
       <li class="nav-item">
@@ -57,7 +57,7 @@
   <!-- /.navbar -->
 
   <!-- Main Sidebar Container -->
-    {% include 'hod_template/sidebar_template.html' with user=user id=id %}
+    {% include 'staff_template/sidebar_template.html' with user=user id=id %}
 
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
@@ -88,7 +88,7 @@
 
   </div>
   <!-- /.content-wrapper -->
-    {% include 'hod_template/footer.html' %}
+    {% include 'staff_template/footer.html' %}
 
 </div>
 <!-- ./wrapper -->
