--- a/herosection/templates/staff_template/sidebar_template.html
+++ b/herosection/templates/staff_template/sidebar_template.html
@@ -45,6 +45,16 @@
             </a>
           </li>
 
+          <li class="nav-item">
+            {% url 'staff_update_attendance' as staff_update_attendance %}
+            <a href="{{ staff_update_attendance }}" class="nav-link {% if request.path == staff_update_attendance %} active {% endif %}">
+              <i class="nav-icon fas fa-th"></i>
+              <p>
+                View Update Attendance
+              </p>
+            </a>
+          </li>
+
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
